error page added

--- a/wcd/website/templates/analyze.html
+++ b/wcd/website/templates/analyze.html
@@ -209,11 +209,11 @@
                 </tr>
                 <tr>
                     <th>Valid From</th>
-                    <td>{{ valid_before }}</td>
+                    <td>{{ not_before }}</td>
                 </tr>
                 <tr>
                     <th>Valid Until</th>
-                    <td>{{ valid_after }}</td>
+                    <td>{{ not_after }}</td>
                 </tr>
                 <tr>
                     <th>Key Size</th>
@@ -229,7 +229,7 @@
                 </tr>
                 <tr>
                     <th>Version</th>
-                    <td>{{ cert_version }}</td>
+                    <td>{{ protocol_version }}</td>
                 </tr>
             </table>
 
