--- a/wcd/website/templates/analyze.html
+++ b/wcd/website/templates/analyze.html
@@ -146,7 +146,8 @@
 <body>
 
     <h1>SSL/TLS Certificate Analyzer</h1>
-    <a href="{% url 'home' %}" class="button"> Home </a>
+    <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
+    <!-- <a href="{% url 'home' %}" class="button"> Home </a> -->
     <a href="{% url 'grading_system' %}" class="button">Know more about grading system</a>
     <a href="{% url 'security_recommendations' %}" class="button">View Security Recommendations</a>
 
