--- a/wcd/website/templates/analyze.html
+++ b/wcd/website/templates/analyze.html
@@ -464,13 +464,13 @@
                 View Recommendations
             </a>
         </div>
-        <div class="pt-4 px-3 py-2 border-bottom mb-3"></div>
+        <div class="pt-4 px-3 py-2 mb-3"></div>
 
         {% endif %}
 
         <!-- Footer -->
 
-        <div class="container">
+        <div class="container border-top">
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center pb-3 mb-3">
                     <li class="nav-item">
