Resolved conflict in analyze.html

--- a/wcd/website/templates/analyze.html
+++ b/wcd/website/templates/analyze.html
@@ -204,11 +204,8 @@
 
                         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                             <li>
-<<<<<<< HEAD
-                                <a href="{% url 'analyze_certificate' %}" class="nav-link text-secondary">
-=======
+                                <!-- <a href="{% url 'analyze_certificate' %}" class="nav-link text-secondary"> -->
                                 <a href="{% url 'home' %}" class="nav-link text-white">
->>>>>>> upstream/main
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                         <use xlink:href="#home"></use>
                                     </svg>
@@ -217,8 +214,6 @@
                                 </a>
                             </li>
                             <li>
-<<<<<<< HEAD
-=======
                                 <a href="{% url 'notification_alert' %}" class="nav-link text-white">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                         <use xlink:href="#envelope"></use> <!-- Use the envelope symbol for contact -->
@@ -238,7 +233,6 @@
                             </li>
                             
                             <li>
->>>>>>> upstream/main
                                 <a href="{% url 'grading_system'%}" class="nav-link text-white">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                         <use xlink:href="#speedometer2"></use>
@@ -248,9 +242,6 @@
                                 </a>
                             </li>
                             <li>
-<<<<<<< HEAD
-                                <a href="{% url 'home' %}" class="nav-link text-white">
-=======
                                 <a href="{% url 'send_email_view' %}" class="nav-link text-white">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                         <use xlink:href="#envelope"></use> <!-- Use the envelope symbol for contact -->
@@ -261,7 +252,6 @@
                             </li>
                             <li>
                                 <a href="{% url 'logout_view' %}" class="nav-link text-white">
->>>>>>> upstream/main
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                         <use xlink:href="#people-circle"></use>
                                     </svg>
