--- a/wcd/website/templates/analyze.html
+++ b/wcd/website/templates/analyze.html
@@ -258,10 +258,13 @@
                                     Logout
                                 </a>
                             </li>
+ 
+                            
                         </ul>
                     </div>
                 </div>
             </div>
+           
         </header>
 
         <!-- Hero Section -->
@@ -509,6 +512,21 @@
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'home' %}" class="nav-link px-2 text-muted">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'send_email_view' %}" class="nav-link px-2 text-muted">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'home' %}" class="nav-link px-2 text-muted">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'disclaimer' %}" class="nav-link px-2 text-muted">Disclaimer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'about' %}" class="nav-link px-2 text-muted">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'copyright' %}" class="nav-link px-2 text-muted">Copyright</a>
                     </li>
                 </ul>
 
