--- a/wcd/website/templates/about.html
+++ b/wcd/website/templates/about.html
@@ -10,23 +10,27 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            padding-top: 20px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            margin: 50px;
+            text-align: center;
+            background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+            background-size: cover
+           
         }
         .container {
             max-width: 800px;
             margin: auto;
         }
         .content {
-            background-color: white;
+            background-color: #beccfc;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            Boeder-color: #050505;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
             border-radius: 8px;
         }
         .content h1 {
-            color: #dc3545;
-            font-size: 32px;
+            color: #050505;
+           
             text-align: center;
             margin-bottom: 20px;
         }
