--- a/wcd/website/templates/copyright.html
+++ b/wcd/website/templates/copyright.html
@@ -10,23 +10,32 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #ffffff;
-            padding-top: 20px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            margin: 50px;
+            text-align: center;
+            background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+            background-size: cover
+        
         }
+        
         .container {
             max-width: 800px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
             margin: auto;
         }
-        .content {
-            background-color: rgb(255, 255, 255);
+        .container{
+            background-color: #beccfc;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            border-color: #050505;
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+            max-width: 1000px;
+            opacity: 10;
+            margin: 0 auto;
         }
+       
         .content h1 {
-            color: #de081d;
-            font-size: 32px;
+            color: #050505;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -35,6 +44,7 @@
             line-height: 1.6;
             color: #333;
         }
+        
         .footer {
             margin-top: 40px;
             text-align: center;
