--- a/wcd/website/templates/notification_alert.html
+++ b/wcd/website/templates/notification_alert.html
@@ -5,13 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notification Alerts</title>
     <style>
-        .container {
+        body {
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            margin: 50px;
+            text-align: center;
+            background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+            background-size: cover
+        
+        } 
+       .container{
+            max-width: 800px;
+            margin: auto;
+            background-color: #beccfc;
+            padding: 20px;
+            Boeder-color: #050505;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+            border-radius: 8px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            font-family: Arial, sans-serif;
+           
         }
         .switch {
             position: relative;
